stage0/tests/compile_fail/types/undef_fn.dg
func main() -> i32 {
    nonexistent(1, 2)
}
